Remove DeviderSkin in ide_lib
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7465 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypeItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypeItemRenderer.mxml
@@ -119,7 +119,7 @@
 					 verticalAlign="middle" horizontalAlign="center">
 				
 				<mx:Image id="typeIcon"
-						  height="49" source="{ _resourceVO.data }" width="49"
+						  source="{ _resourceVO.data }"
 						  horizontalCenter="0"
 						  smoothBitmapContent="true"/>
 				
