--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
@@ -3,7 +3,9 @@
 			 xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 minWidth="200" creationComplete="sparkskin1_creationCompleteHandler(event)" xmlns:mx1="library://ns.adobe.com/flex/mx" xmlns:view="net.vdombox.view.*">
+			 minWidth="200" creationComplete="sparkskin1_creationCompleteHandler(event)" 
+			 xmlns:mx1="library://ns.adobe.com/flex/mx" xmlns:view="net.vdombox.view.*"
+			 mouseOver="{ imageDelete.alpha = 1 }" mouseOut="{ imageDelete.alpha = .5 }">
 
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.events.view.components.ActionElement")]
@@ -106,6 +108,8 @@
 
 			protected function sparkskin1_creationCompleteHandler(event:FlexEvent):void
 			{
+				doubleClickEnabled = true;
+				addEventListener( MouseEvent.DOUBLE_CLICK, hideButton_clickHandler, true, 0 , true );
 				BindingUtils.bindProperty( this, "data", hostComponent, "data", true );
 			}
 
@@ -161,7 +165,7 @@
 				  gap="1">
 
 			<s:Group id="headerGroup"
-					 height="25" width="100%">
+					 height="28" width="100%">
 
 				<s:Rect bottom="0" left="0" right="0" top="0">
 
@@ -169,18 +173,36 @@
 
 						<s:LinearGradient rotation="90">
 
-							<s:GradientEntry color="0x5E04BE"/>
+							<s:GradientEntry color="0x8023Ef"/>
 
-							<s:GradientEntry color="0x260057"/>
+							<s:GradientEntry color="0x5C07B9"/>
 						</s:LinearGradient>
 					</s:fill>
 				</s:Rect>
-
-				<s:Label id="titleLabel"
-						 text="{ hostComponent.title }"
-						 color="#FFFFFF" left="5" right="20" textAlign="center"
-						 verticalCenter="0"
-						 maxDisplayedLines="1"/>
+					
+				<s:Label id="titleLabel" width="100%"
+								text="{ hostComponent.title }"
+								color="#FFFFFF" textAlign="center"
+								verticalCenter="0" maxDisplayedLines="1"/>	
+						
+				<s:Group bottom="0" right="0" top="0" width="25">
+					<s:Rect width="100%" height="100%">						
+						<s:fill>						
+							<s:LinearGradient rotation="90">				
+								<s:GradientEntry color="0x8023Ef"/>				
+								<s:GradientEntry color="0x5C07B9"/>
+							</s:LinearGradient>
+						</s:fill>
+					</s:Rect>
+						
+					<s:HGroup id="imageGroup" height="100%" horizontalAlign="right" verticalAlign="middle" paddingRight="5">
+							
+						<mx1:Image id="imageDelete" source="@Embed('assets/delete.png')"
+									   alpha=".5"
+									   click="hostComponent.dispatchEvent( new ElementEvent( ElementEvent.DELETE ) )" />
+							
+					</s:HGroup>
+				</s:Group>
 
 			</s:Group>
 
@@ -188,38 +210,28 @@
 					 width="100%"
 					 itemCreationPolicy="immediate" includeIn="full"/>
 
-			<s:Group width="100%">
-
+			<s:Group width="100%" height="16" includeIn="full">
+				
 				<s:Rect bottom="0" left="0" right="0" top="0">
-
 					<s:fill>
-
-						<s:SolidColor color="0x518000"/>
+						
+						<s:LinearGradient rotation="90">
+							
+							<s:GradientEntry color="0x7A1EE5"/>
+							
+							<s:GradientEntry color="0x5905B5"/>
+						</s:LinearGradient>
+						
 					</s:fill>
+					
 				</s:Rect>
-
-				<s:HGroup height="17" width="100%"
-						  gap="1">
-
-					<components:ElementButton id="hideButton"
-											  height="17" icon.full="@Embed('assets/hide.png')" icon.short="@Embed('assets/show.png')"
-											  label.full="{ resourceManager.getString( 'Events_General', 'action_element_hide' ) }"
-											  label.short="{ resourceManager.getString( 'Events_General', 'action_element_show' ) }"
-											  minWidth="10" width="100%"
-											  cornerRadius="0" skinClass="net.vdombox.ide.modules.events.view.skins.ElementButtonSkin"
-											  click="hideButton_clickHandler( event )"/>
-
-					<!--<components:ElementButton height="17" icon="@Embed('assets/arrow.png')" label="translate" minWidth="10"
-						 width="100%"
-						 cornerRadius="0" skinClass="net.vdombox.ide.modules.events.view.skins.ElementButtonSkin"
-						 click="hostComponent.dispatchEvent( new ElementEvent( ElementEvent.CREATE_LINKAGE ) )"/>-->
-
-					<components:ElementButton height="17" icon="@Embed('assets/delete.png')" label="{ resourceManager.getString( 'Events_General', 'action_element_delete' ) }" minWidth="10"
-											  width="100%"
-											  cornerRadius="0" skinClass="net.vdombox.ide.modules.events.view.skins.ElementButtonSkin"
-											  click="hostComponent.dispatchEvent( new ElementEvent( ElementEvent.DELETE ) )"/>
+				
+				<s:HGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle" >
+					
+					<mx1:Image source="@Embed('assets/arr_2.png')" click="hideButton_clickHandler(event)" />
 					
 				</s:HGroup>
+				
 			</s:Group>
 		</s:VGroup>
 	</s:Group>
