--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
@@ -3,7 +3,8 @@
 				xmlns:s="library://ns.adobe.com/flex/spark"
 				xmlns:mx="library://ns.adobe.com/flex/mx"
 				
-				focusEnabled="false" xmlns:view="net.vdombox.view.*">
+				focusEnabled="false" xmlns:view="net.vdombox.view.*"
+				minHeight="22">
 	
 	<fx:Script>
 		<![CDATA[
@@ -59,9 +60,11 @@
 			 top="-2"
 			 bottom="-2">
 		
-		<s:HGroup width="100%" height="100%" verticalAlign="middle">
+		<s:HGroup width="100%" height="100%" verticalAlign="middle" paddingLeft="4" gap="4">
 			
-			<s:HGroup height="20"
+			<mx:Image height="14" width="5" source="@Embed('assets/divider_v.png')"/>
+			
+			<s:HGroup height="22"
 					  left="0" right="0" verticalAlign="middle">
 				
 				<mx:Image height="16" source="{currentIcon}" width="16" />
