--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
@@ -22,8 +22,8 @@
 			import spark.components.Label;
 			import spark.skins.spark.PanelSkin;
 
-			[Embed( source="assets/parameter.png" )]
-			private var parameterIcon : Class;
+			/*[Embed( source="assets/parameter.png" )]
+			private var parameterIcon : Class;*/
 
 			[SkinPart( required="true" )]
 			public var headerGroup : Group;
