--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/WorkArea.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/WorkArea.mxml
@@ -14,6 +14,8 @@
 			
 			import net.vdombox.ide.common.vo.ResourceVO;
 			import net.vdombox.ide.modules.resourceBrowser.events.WorkAreaEvent;
+			import net.vdombox.view.Alert;
+			import net.vdombox.view.AlertButton;
 
 			[SkinPart( required="true" )]
 			public var deleteButton : WorkAreaButton;
@@ -75,7 +77,15 @@
 			
 			private function getResourceButton_clickHandler( event : MouseEvent ) : void
 			{
-				if ( previewArea.resourceVO && !previewArea.resourceVO.data )
+				if ( !previewArea.resourceVO )
+				{
+					Alert.yesLabel = "OK";
+					Alert.Show( "Not select resource!", AlertButton.OK, this );
+					return;
+				}
+					
+				
+				if ( !previewArea.resourceVO.data )
 				{
 					BindingUtils.bindSetter( dataChanged, previewArea.resourceVO, "data", true, true );
 					dispatchEvent( new WorkAreaEvent ( WorkAreaEvent.LOAD_RESOURCE ) );
