--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/skins/WorkAreaSkin.mxml
@@ -50,9 +50,8 @@
 
 		<mx:Spacer width="100%"/>
 		
-		<components:WorkAreaButton id="getResourceButton"
-								   height="20" label="{ resourceManager.getString( 'ResourceBrowser_General', 'work_area_get_resource' ) }"
-								   highlighted="{ hostComponent.isAddResourcesShowed }"/>
+		<components:WorkAreaButton id="getResourceButton" icon="@Embed('assets/expand.png')"
+								   height="20" label="{ resourceManager.getString( 'ResourceBrowser_General', 'work_area_get_resource' ) }"/>
 
 		<components:WorkAreaButton id="showInfoButton"
 								   height="20" icon="@Embed('assets/expand.png')" label="{ hostComponent.isInfoShowed ? resourceManager.getString( 'ResourceBrowser_General', 'work_area_hide_info' ) : resourceManager.getString( 'ResourceBrowser_General', 'work_area_show_info' ) }"/>
