--- a/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMHScrollBarTrackSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMHScrollBarTrackSkin.mxml
@@ -21,7 +21,7 @@
       @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-    xmlns:fb="http://ns.adobe.com/flashbuilder/2009">
+    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha="0.5">
 
     <fx:Metadata>
     <![CDATA[ 
@@ -53,7 +53,7 @@
 	<!-- border/fill -->
 	<s:Rect top="0" bottom="0" left="0" right="0" minWidth="30" minHeight="7">
 		<s:fill>
-			<s:BitmapFill source = "@Embed('net/vdombox/icons/scroll_bg_bottom.png')" smooth="true" fillMode="repeat"/>
+			<s:BitmapFill source = "@Embed('net/vdombox/icons/mini-horizontal-bg.png')" smooth="true" fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
 
