--- a/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMVScrollBarThumbSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMVScrollBarThumbSkin.mxml
@@ -52,29 +52,19 @@
 
     <!-- background -->
 	<s:VGroup height="100%" gap="0" verticalAlign="middle">
-		<s:Rect left="0" top="1" right="0" minWidth="7" minHeight="8" maxHeight="8">
+		<s:Rect left="0" top="0" right="0" minWidth="10" minHeight="9" maxHeight="9">
 			<s:fill>
-				<s:BitmapFill source = "@Embed('net/vdombox/icons/scroll_top.png')" smooth="true"/>
+				<s:BitmapFill source = "@Embed('net/vdombox/icons/mini-vertical-scroll-top.png')" smooth="true"/>
 			</s:fill>
 		</s:Rect>
-		<s:Rect left="0" right="0" minWidth="7" height="100%">
+		<s:Rect left="0" right="0" minWidth="10" height="100%">
 			<s:fill>
-				<s:BitmapFill source = "@Embed('net/vdombox/icons/scroll_rezinka.png')" smooth="true" fillMode="scale"/>
+				<s:BitmapFill source = "@Embed('net/vdombox/icons/mini-vertical-scroll-center.png')" smooth="true" fillMode="repeat"/>
 			</s:fill>
 		</s:Rect>
-		<s:Rect left="0" right="0" minWidth="7" minHeight="26" maxHeight="26">
+		<s:Rect left="0" right="0" bottom="0" minWidth="10" minHeight="9" maxHeight="9">
 			<s:fill>
-				<s:BitmapFill source = "@Embed('net/vdombox/icons/scroll_center.png')" smooth="true"/>
-			</s:fill>
-		</s:Rect>
-		<s:Rect left="0" right="0" minWidth="7" height="100%">
-			<s:fill>
-				<s:BitmapFill source = "@Embed('net/vdombox/icons/scroll_rezinka.png')" smooth="true" fillMode="scale"/>
-			</s:fill>
-		</s:Rect>
-		<s:Rect left="0" right="0" bottom="2" minWidth="7" minHeight="8" maxHeight="8">
-			<s:fill>
-				<s:BitmapFill source = "@Embed('net/vdombox/icons/scroll_bottom.png')" smooth="true"/>
+				<s:BitmapFill source = "@Embed('net/vdombox/icons/mini-vertical-scroll-bottom.png')" smooth="true"/>
 			</s:fill>
 		</s:Rect>
 	</s:VGroup>
