--- a/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMVScrollBarTrackSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMVScrollBarTrackSkin.mxml
@@ -51,9 +51,9 @@
     </s:states>
 
     <!-- border/fill -->
-    <s:Rect top="0" bottom="0" left="0" right="0" minWidth="7" minHeight="30">
+    <s:Rect top="0" bottom="0" left="0" right="0" minWidth="10" minHeight="30" alpha="0.5">
 		<s:fill>
-			<s:BitmapFill source = "@Embed('net/vdombox/icons/scroll_bg.png')" smooth="true" fillMode="repeat"/>
+			<s:BitmapFill source = "@Embed('net/vdombox/icons/mini-vertical-bg.png')" smooth="true" fillMode="repeat"/>
 		</s:fill>
     </s:Rect>
 
