--- a/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMWorkAreaVScrollBarTrackSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMWorkAreaVScrollBarTrackSkin.mxml
@@ -21,7 +21,7 @@
       @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-    xmlns:fb="http://ns.adobe.com/flashbuilder/2009">
+    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha="0.5">
 
     <fx:Metadata>
     <![CDATA[ 
@@ -51,7 +51,7 @@
     </s:states>
 
     <!-- border/fill -->
-    <s:Rect top="0" bottom="0" left="0" right="0" minWidth="10" minHeight="30">
+    <s:Rect top="0" bottom="0" left="0" right="0" minWidth="12" minHeight="30">
 		<s:fill>
 			<s:BitmapFill source = "@Embed('net/vdombox/icons/vertical-bg.png')" smooth="true" fillMode="repeat"/>
 		</s:fill>
