--- a/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/dialog/EditCaption.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/PowerPack/com/dialog/EditCaption.mxml
@@ -10,11 +10,14 @@
 			
 			private static var _dialog:EditCaption;
 			
-			static public function show(title:String, closeHandler:Function = null):EditCaption
+			public var _checkCategoryLabel : Function;
+			
+			static public function show(title:String, closeHandler:Function = null, checkCategoryLabel:Function = null):EditCaption
 			{
 				if(!_dialog || _dialog.closed) 
 				{
 					_dialog = new EditCaption();
+					_dialog._checkCategoryLabel = checkCategoryLabel;
 					_dialog.title = title;	
 					_dialog.open();
 					_dialog.show(OK | CANCEL, closeHandler, null, OK);				
@@ -29,8 +32,61 @@
 			
 			private function onShow():void
 			{
+				txtCaption.errorString = null;
 				txtCaption.setFocus();
-			}				
+			}
+			
+			static public function closeDialog() : void 
+			{
+				if (!_dialog || _dialog.closed)
+					return;
+				
+				_dialog.close();
+			}
+			
+			static public function showCategoryLabelError() : void 
+			{
+				if (!_dialog || _dialog.closed)
+					return;
+				
+				_dialog.showDialogLabelError();
+			}
+			
+			public function showDialogLabelError():void
+			{
+				txtCaption.errorString = LanguageManager.sentences['msg_enter_unique_category_label'];
+			}
+			
+			protected override function removeDialog(buttonPressed:String):void
+			{
+				switch(buttonPressed)
+				{
+					case BUTTON_NAME_OK:
+					{
+						if (_checkCategoryLabel != null)
+							_checkCategoryLabel(_dialog.txtCaption.text);
+						else
+							_dialog.close();
+						break;
+					}
+					case BUTTON_NAME_CANCEL:
+					{
+						_dialog.close();
+						break;
+					}	
+					default:
+					{
+						_dialog.close();
+						break;
+					}
+				}
+			}
+			
+			protected function onCaptionTxtChange(event:Event):void
+			{
+				txtCaption.errorString = null;
+			}
+			
 		]]>
 	</mx:Script>	
 	
@@ -41,7 +97,7 @@
 	<mx:HRule width="100%"/>
 		
 	<mx:VBox styleName="dlgContent" height="100%" width="100%" horizontalAlign="center">
-		<mx:TextInput id="txtCaption" width="90%"/>			
+		<mx:TextInput id="txtCaption" width="90%" change="onCaptionTxtChange(event)"/>			
 	</mx:VBox>	
 
 	<mx:HRule width="100%"/>
